Reusable product component has been implemented with some mock data

--- a/src/components/product-component/index.css
+++ b/src/components/product-component/index.css
@@ -1,15 +1,8 @@
-.products {
-    @apply
-    grid
-    gap-16
-    grid-cols-3
-    px-[5%];
-}
 .product {
     &__details {
         @apply
-        mt-6
         mx-5
+        my-6
     }
     &__image {
         @apply
@@ -66,5 +59,53 @@
             hover:text-primary
             hover:bg-white
         }
+    }
+}
+
+.product-tiles {
+    @apply
+    grid
+    gap-10
+    grid-cols-2
+    my-16
+    px-[5%];
+}
+.product-tile {
+    @apply
+    box-content
+    relative;
+    &__details {
+        @apply
+        absolute
+        flex
+        flex-col
+        items-center
+        justify-center
+        h-[85%]
+        pt-20
+        right-[10%]
+        top-0
+        w-[40%]
+    }
+    &__title {
+        @apply
+        mb-3
+        leading-normal
+        text-[32px]
+    }
+    &__sub-title {
+        @apply
+        text-secondary
+        text-xl;
+    }
+    &__cta {
+        @apply
+        flex-1
+        flex
+        items-end
+        justify-end
+        font-family-bold
+        underline
+        w-full;
     }
 }
