--- a/src/components/product-component/index.css
+++ b/src/components/product-component/index.css
@@ -10,12 +10,13 @@
     }
     &__sub-title {
         @apply
-        leading-6
+        leading-none
         opacity-80
+        text-lg
     }
     &__title {
         @apply
-        leading-8
+        leading-normal
     }
     &__overlay {
         @apply
@@ -60,6 +61,36 @@
             hover:bg-white
         }
     }
+    &.size-medium {
+        @apply
+        max-w-xl;
+        .product {               
+            &__sub-title {
+                @apply
+                leading-6
+                text-base
+            }
+            &__title {
+                @apply
+                leading-8
+                text-2xl
+            }
+        }
+    }
+    &.size-small {
+        @apply
+        max-w-xs;
+        .product {               
+            &__sub-title {
+                @apply
+                text-base
+            }
+            &__title {
+                @apply
+                text-2xl
+            }
+        }
+    }
 }
 
 .product-tiles {
@@ -67,6 +98,7 @@
     grid
     gap-10
     grid-cols-2
+    min-w-max
     my-16
     px-[5%];
 }
@@ -79,10 +111,10 @@
         absolute
         flex
         flex-col
-        items-center
+        items-start
         justify-center
-        h-[85%]
-        pt-20
+        h-full
+        py-[17%]
         right-[10%]
         top-0
         w-[40%]
@@ -91,21 +123,68 @@
         @apply
         mb-3
         leading-normal
-        text-[32px]
+        text-7xl
     }
     &__sub-title {
         @apply
+        leading-normal
         text-secondary
-        text-xl;
+        text-4xl;
     }
     &__cta {
         @apply
         flex-1
         flex
+        font-family-bold
         items-end
         justify-end
-        font-family-bold
+        text-2xl
+        mb-6
         underline
         w-full;
+    }
+    &.size-medium {
+        @apply
+        max-w-xl;
+        .product-tile {
+            &__details {
+                @apply
+                pt-[13%]
+                pb-[5%];
+            }
+            &__title {
+                @apply
+                text-[32px];
+            }
+            &__sub-title {
+                @apply
+                text-xl;
+            }
+            &__cta {
+                @apply
+
+                text-base
+            }
+        }
+    }
+    &.size-small {
+        @apply
+        max-w-sm;
+        .product-tile {
+            &__title {
+                @apply
+                text-xl;
+            }
+            &__sub-title {
+                @apply
+                text-base;
+            }
+            &__cta {
+                @apply
+                mb-0
+                mt-8            
+                text-sm
+            }
+        }
     }
 }
