--- a/src/root.css
+++ b/src/root.css
@@ -34,4 +34,8 @@ body {
     h1, h2, h3, h4 {
         @apply font-family-bold leading-relaxed;
     }
+    img {
+        @apply
+        w-full
+    }
 }
