--- a/src/components/product-component/index.css
+++ b/src/components/product-component/index.css
@@ -1,189 +1,252 @@
 .product {
-    &__details {
-        @apply
-        mx-5
-        my-6
-    }
-    &__image {
-        @apply
-        relative;
-    }
-    &__sub-title {
-        @apply
-        leading-none
-        opacity-80
-        text-lg
-    }
-    &__title {
-        @apply
-        leading-normal
-    }
-    &__overlay {
-        @apply
-        absolute
-        bg-primary
-        bg-opacity-40
-        cursor-pointer
-        duration-500
-        flex
-        items-center
-        justify-center
-        h-full
-        hover:opacity-100
-        left-0
-        opacity-0
-        top-0
-        transition-opacity
-        w-full        
-    }
-    &__sizes {
-        @apply
-        font-bold;
-        &__title {
-            @apply
-            mx-4
-            text-white
-            text-opacity-70
-        }
-        &__size {
-            @apply
-            border
-            inline-block
-            duration-500
-            m-2
-            min-w-[100px]
-            px-4
-            py-3
-            text-white
-            text-center
-            transition-all
-            hover:text-primary
-            hover:bg-white
-        }
-    }
-    &.size-medium {
-        @apply
-        max-w-xl;
-        .product {               
-            &__sub-title {
-                @apply
-                leading-6
-                text-base
-            }
-            &__title {
-                @apply
-                leading-8
-                text-2xl
-            }
-        }
-    }
-    &.size-small {
-        @apply
-        max-w-xs;
-        .product {               
-            &__sub-title {
-                @apply
-                text-base
-            }
-            &__title {
-                @apply
-                text-2xl
-            }
-        }
-    }
-}
-
-.product-tiles {
     @apply
-    grid
-    gap-10
-    grid-cols-2
-    min-w-max
-    my-16
-    px-[5%];
-}
-.product-tile {
-    @apply
-    box-content
-    relative;
-    &__details {
-        @apply
-        absolute
-        flex
-        flex-col
-        items-start
-        justify-center
-        h-full
-        py-[17%]
-        right-[10%]
-        top-0
-        w-[40%]
-    }
-    &__title {
-        @apply
-        mb-3
-        leading-normal
-        text-7xl
-    }
-    &__sub-title {
-        @apply
-        leading-normal
-        text-secondary
-        text-4xl;
-    }
-    &__cta {
-        @apply
-        flex-1
-        flex
-        font-family-bold
-        items-end
-        justify-end
-        text-2xl
-        mb-6
-        underline
-        w-full;
-    }
-    &.size-medium {
-        @apply
-        max-w-xl;
-        .product-tile {
-            &__details {
-                @apply
-                pt-[13%]
-                pb-[5%];
-            }
-            &__title {
-                @apply
-                text-[32px];
-            }
-            &__sub-title {
-                @apply
-                text-xl;
-            }
-            &__cta {
-                @apply
-
-                text-base
-            }
-        }
-    }
-    &.size-small {
+    my-4
+    md:my-0
+    md:p-4
+    max-w-xs;
+    &--medium {
         @apply
         max-w-sm;
-        .product-tile {
+    }
+    &--large {
+        @apply
+        max-w-md;
+    }
+    &--extra-large {
+        @apply
+        max-w-lg;
+    }
+}
+
+.product--with-size {
+    @apply max-w-[300px];
+    .product {
+        &__details {
+            @apply
+            pt-4
+            text-center
+        }
+        &__image {
+            @apply
+            relative;
+        }
+        &__sub-title {
+            @apply
+            leading-none
+            opacity-80
+            text-lg
+            md:text-xl
+        }
+        &__title {
+            @apply
+            leading-normal
+            text-2xl
+            md:text-2xl
+        }
+        &__overlay {
+            @apply
+            absolute
+            bg-primary
+            bg-opacity-40
+            cursor-pointer
+            duration-500
+            flex
+            items-center
+            justify-center
+            h-full
+            hover:opacity-100
+            left-0
+            opacity-0
+            top-0
+            transition-opacity
+            w-full        
+        }
+        &__sizes {
+            @apply
+            font-bold;
             &__title {
                 @apply
-                text-xl;
+                mx-4
+                text-white
+                text-opacity-70
             }
-            &__sub-title {
+            &__size {
                 @apply
-                text-base;
+                border
+                inline-block
+                duration-500
+                m-2
+                min-w-[80px]
+                px-4
+                py-3
+                text-white
+                text-center
+                transition-all
+                hover:text-primary
+                hover:bg-white
             }
-            &__cta {
-                @apply
-                mb-0
-                mt-8            
-                text-sm
+        }
+    }
+    @screen sm {
+        &.product--medium {
+            @apply max-w-xs;
+            .product {
+                &__sub-title {
+                    @apply
+                    text-2xl
+                }
+                &__title {
+                    @apply
+                    text-3xl
+                }
+                &__sizes {
+                    &__title {
+                        @apply
+                        text-lg
+                    }
+                    &__size {
+                        @apply
+                        min-w-[100px]
+                        text-lg
+                    }
+                }
+            }
+        }
+    }
+    @screen md {
+        &.product--large {
+            .product {
+                &__sub-title {
+                    @apply
+                    text-3xl
+                }
+                &__title {
+                    @apply
+                    text-4xl
+                }
+                &__sizes {
+                    &__title {
+                        @apply
+                        text-2xl
+                    }
+                    &__size {
+                        @apply
+                        min-w-[120px]
+                        text-2xl
+                    }
+                }
+            }
+        }
+    }
+    @screen lg {
+        &.product--extra-large {
+            .product {
+                &__sub-title {
+                    @apply
+                    text-4xl
+                }
+                &__title {
+                    @apply
+                    text-5xl
+                }
+                &__sizes {
+                    &__title {
+                        @apply
+                        text-3xl
+                    }
+                    &__size {
+                        @apply
+                        min-w-[120px]
+                        text-3xl
+                    }
+                }
+            }
+        }
+    }
+}
+
+.product--with-cta {
+    @apply
+    relative;
+    .product {
+        &__details {
+            @apply
+            absolute
+            flex
+            flex-col
+            items-start
+            justify-center
+            h-full
+            right-[10%]
+            top-0
+            w-[40%]
+        }
+        &__title {
+            @apply
+            leading-normal
+            mb-2
+            text-lg
+        }
+        &__sub-title {
+            @apply
+            leading-normal
+            text-secondary
+            text-base
+        }
+        &__cta {
+            @apply
+            flex
+            font-family-bold
+            items-end
+            justify-end
+            text-base
+            underline
+            mt-4
+            w-full;
+        }
+    }
+    @screen sm {
+        &.product--medium {
+            .product {
+                &__title {
+                    @apply mb-3 text-xl
+                }
+                &__sub-title {
+                    @apply text-lg
+                }
+                &__cta {
+                    @apply mt-4 text-lg
+                }
+            }
+        }
+    }
+    @screen md {
+        &.product--large {
+            .product {
+                &__title {
+                    @apply mb-4 text-2xl
+                }
+                &__sub-title {
+                    @apply text-xl
+                }
+                &__cta {
+                    @apply mt-6 text-xl
+                }
+            }
+        }
+    }
+    @screen lg {
+        &.product--extra-large {
+            .product {
+                &__title {
+                    @apply mb-6 text-3xl
+                }
+                &__sub-title {
+                    @apply text-2xl
+                }
+                &__cta {
+                    @apply mt-8 text-2xl
+                }
             }
         }
     }
