--- a/src/components/product-list-component/index.css
+++ b/src/components/product-list-component/index.css
@@ -1,7 +1,7 @@
 .products {
     @apply
-    grid
-    gap-16
-    my-6
-    px-[5%];
+    flex
+    flex-row
+    flex-wrap
+    justify-center;
 }
