--- a/src/components/product-component/index.css
+++ b/src/components/product-component/index.css
@@ -1,30 +1,13 @@
 .product {
     @apply
-    my-4
-    md:my-0
-    md:p-4
-    max-w-xs;
-    &--medium {
-        @apply
-        max-w-sm;
-    }
-    &--large {
-        @apply
-        max-w-md;
-    }
-    &--extra-large {
-        @apply
-        max-w-lg;
-    }
+    mb-5;
 }
-
 .product--with-size {
-    @apply max-w-[300px];
     .product {
         &__details {
             @apply
             pt-4
-            text-center
+            px-5;
         }
         &__image {
             @apply
@@ -34,14 +17,12 @@
             @apply
             leading-none
             opacity-80
-            text-lg
-            md:text-xl
+            text-xs
         }
         &__title {
             @apply
             leading-normal
-            text-2xl
-            md:text-2xl
+            text-lg
         }
         &__overlay {
             @apply
@@ -76,7 +57,7 @@
                 inline-block
                 duration-500
                 m-2
-                min-w-[80px]
+                min-w-[70px]
                 px-4
                 py-3
                 text-white
@@ -86,8 +67,241 @@
                 hover:bg-white
             }
         }
+        @screen sm {
+            &__sub-title {
+                @apply
+                text-base
+            }
+            &__title {
+                @apply
+                text-2xl
+            }
+        }
+        @screen md {
+            &__sub-title {
+                @apply
+                text-sm;
+            }
+            &__title {
+                @apply
+                text-xl
+            }
+        }
+        @screen lg {
+            &__sub-title {
+                @apply
+                text-base
+            }
+            &__title {
+                @apply
+                text-2xl
+            }
+            &__sizes {
+                &__size {
+                    @apply
+                    min-w-[96px];
+                }
+            }
+        }
     }
-    @screen sm {
+    &.product {
+        @screen md {
+            &--medium-1 {
+                .product {
+                    &__sub-title {
+                        @apply
+                        text-xl;
+                    }
+                    &__title {
+                        @apply
+                        text-3xl
+                    }
+                    &__sizes {
+                        &__title {
+                            @apply
+                            text-xl;
+                        }
+                        &__size {
+                            @apply
+                            min-w-[150px]
+                            text-xl;
+                        }
+                    }
+                }
+            }
+            &--medium-2{
+                .product {
+                    &__sub-title {
+                        @apply
+                        text-base;
+                    }
+                    &__title {
+                        @apply
+                        text-2xl
+                    }
+                    &__sizes {
+                        &__title {
+                            @apply
+                            text-lg;
+                        }
+                        &__size {
+                            @apply
+                            min-w-[110px]
+                            text-lg;
+                        }
+                    }
+                }
+            }
+        }
+        @screen lg {
+            &--large-3 {
+                .product {
+                    &__sub-title {
+                        @apply
+                        text-lg;
+                    }
+                    &__title {
+                        @apply
+                        text-2xl
+                    }
+                    &__sizes {
+                        &__title {
+                            @apply
+                            text-base;
+                        }
+                        &__size {
+                            @apply
+                            min-w-[75px]
+                            text-base;
+                        }
+                    }
+                }
+            }
+            &--large-2 {
+                .product {
+                    &__sub-title {
+                        @apply
+                        text-xl;
+                    }
+                    &__title {
+                        @apply
+                        text-3xl
+                    }
+                    &__sizes {
+                        &__title {
+                            @apply
+                            mb-3
+                            text-xl;
+                        }
+                        &__size {
+                            @apply
+                            min-w-[120px]
+                            text-xl;
+                        }
+                    }
+                }
+            }
+            &--large-1 {
+                .product {
+                    &__sub-title {
+                        @apply
+                        text-2xl;
+                    }
+                    &__title {
+                        @apply
+                        text-4xl
+                    }
+                    &__sizes {
+                        &__title {
+                            @apply
+                            mb-6
+                            text-2xl;
+                        }
+                        &__size {
+                            @apply
+                            min-w-[200px]
+                            text-2xl;
+                        }
+                    }
+                }
+            }
+        }
+        @screen xl {            
+            &--extra-large-3 {
+                .product {
+                    &__sub-title {
+                        @apply
+                        text-xl;
+                    }
+                    &__title {
+                        @apply
+                        text-3xl
+                    }
+                    &__sizes {
+                        &__title {
+                            @apply
+                            mb-4
+                            text-xl;
+                        }
+                        &__size {
+                            @apply
+                            min-w-[120px]
+                            text-xl;
+                        }
+                    }
+                }
+            }
+            &--extra-large-2 {
+                .product {
+                    &__sub-title {
+                        @apply
+                        text-2xl;
+                    }
+                    &__title {
+                        @apply
+                        text-4xl
+                    }
+                    &__sizes {
+                        &__title {
+                            @apply
+                            mb-4
+                            text-2xl;
+                        }
+                        &__size {
+                            @apply
+                            min-w-[150px]
+                            text-2xl;
+                        }
+                    }
+                }
+            }
+            &--extra-large-1 {
+                .product {
+                    &__sub-title {
+                        @apply
+                        text-3xl;
+                    }
+                    &__title {
+                        @apply
+                        text-5xl
+                    }
+                    &__sizes {
+                        &__title {
+                            @apply
+                            mb-6
+                            text-3xl;
+                        }
+                        &__size {
+                            @apply
+                            min-w-[200px]
+                            text-3xl;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    /* @screen sm {
         &.product--medium {
             @apply max-w-xs;
             .product {
@@ -162,10 +376,10 @@
                 }
             }
         }
-    }
+    } */
 }
 
-.product--with-cta {
+/* .product--with-cta {
     @apply
     relative;
     .product {
@@ -250,4 +464,4 @@
             }
         }
     }
-}
+} */
