--- a/src/root.css
+++ b/src/root.css
@@ -14,6 +14,11 @@
 @tailwind utilities;
 
 /* base changes */
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
 body {
     @apply
     font-family-regular
