--- a/src/pages/home-page/index.css
+++ b/src/pages/home-page/index.css
@@ -13,7 +13,7 @@
         after:h-[6px]
         after:text-center
         after:w-[50px]
-        after:bg-rose-400
+        after:bg-peach
         flex
         flex-col
         items-center
