--- a/src/components/container-component/index.css
+++ b/src/components/container-component/index.css
@@ -1,10 +1,12 @@
 .wrapper {
     @apply
     p-5
-    pt-16
+    pt-20
     md:container
     md:mx-auto
     md:p-8
+    md:pt-20
     md:max-w-6xl
-    lg:p-12;
+    lg:p-12
+    lg:pt-28;
 }
