--- a/src/forms/register-form/password-strength.css
+++ b/src/forms/register-form/password-strength.css
@@ -1,5 +1,5 @@
 .password-strength-popup {
-    @apply relative px-6 pt-5 text-sm w-fit;
+    @apply relative px-6 pt-4 md:pt-5 text-sm w-fit;
     @screen xl {
         @apply absolute border border-slate-300 p-5 px-6 shadow-lg shadow-slate-300/50 text-sm left-[calc(100%+30px)] -top-[calc(50%+25px)] w-fit;        
     }
