--- a/src/components/header-component/index.css
+++ b/src/components/header-component/index.css
@@ -6,13 +6,14 @@
     flex
     items-center
     justify-between
-    py-2
-    px-6
     shadow-md
     shadow-slate-200
     text-primary
     w-full
     z-50;
+    .wrapper {
+        @apply w-full flex flex-row justify-between items-center py-2;
+    }
     &__logo {
         @apply
         font-family-bold
@@ -45,7 +46,7 @@
             relative
             transition-all
             -left-full
-            md:mx-4;
+            md:ml-8;
             &:nth-child(1) {
                 @apply delay-[400ms];
             }
