--- a/src/pages/login-page/index.css
+++ b/src/pages/login-page/index.css
@@ -1,5 +1,5 @@
 .login {
-    @apply flex flex-col items-center;
+    @apply flex flex-col items-center mb-16;
     &__header {
         @apply mb-10;
     }
@@ -7,6 +7,9 @@
         @apply min-w-full md:min-w-[500px];
     }
     &__link {
-        @apply mt-10 underline underline-offset-1;
+        @apply font-family-bold mt-10 underline underline-offset-1;
+    }
+    .link-text {
+        @apply mt-14;
     }
 }
