--- a/src/components/header-component/index.css
+++ b/src/components/header-component/index.css
@@ -1,12 +1,13 @@
 .header {
   @apply
+  bg-white
   text-primary
   flex
   sm:flex-row
   justify-between
   items-center
   py-2
-  px-6
+  px-4
   shadow-md
   shadow-slate-200;
   .bars {
