Push to Live (#49)
* create the PR link after the code push is done (#24)

* Added the functionality to the creating PR link after the code push using yarn scripts

* Reusable product component implemented

* Reusable product component implemented (#26)

* Reusable product component has been implemented with some mock data

* Reusable product component has been implemented with some mock data (#28)

A reusable product component has been implemented with some mock data

* Product list component unit test fix

* Product list component unit test fix

* Product list component unit test fix

* Product list component unit test bug fix (#30)

* Reusable product component has been implemented with some mock data

* Modified the  product component as reusable to provide the product based on the passing props

* 'Responsive

* Responsive styles updated for the reusable product component

* Responsive styles updated for the reusable product component

* Responsive styles updated for two reusable product components

* commiting inital part

* Order confirmation page (Static)

* Responsive styled reusable products done

* Unit test fix in reusable product components

* Reusable form and input components implemented and login and register forms created

* Absolute path mapping done in babelrc and tsconfig file

* Mobile view Hamburger menu implemented

* nav-bar issue fixed in header component

* Checkout static page completed

* Form data updated in login and register page

* Header and Footer

* User store and services created for login form using MobX

* swagger file for api

* Update swagger-click-and-buy.yml

* User register and login modules completed with proper API requests, loader and error handling

* Implemented the cart overlay page with static contents

* Update README.md

Signed-off-by: Seenivasan Balakrishan <seenivasan.balakrishnan@csscorp.com>
Co-authored-by: SeenivasanBalakrishnan <94740032+See

--- a/src/components/container-component/index.css
+++ b/src/components/container-component/index.css
@@ -1,5 +1,12 @@
-.container {
+.wrapper {
     @apply
-    m-10
-    min-h-[60vh]
+    p-5
+    pt-10
+    md:container
+    md:mx-auto
+    md:p-8
+    md:pt-20
+    md:max-w-6xl
+    lg:p-0
+    lg:pt-16;
 }
