--- a/src/components/header-component/index.css
+++ b/src/components/header-component/index.css
@@ -1,29 +1,196 @@
 .header {
+  @apply
+  bg-white
+  text-primary
+  flex
+  sm:flex-row
+  justify-between
+  items-center
+  py-2
+  px-4
+  shadow-md
+  shadow-slate-200;
+  .bars {
     @apply
+    md:hidden
+    mr-[4px]
     text-primary
+    text-[25px]
+    w-[30px];
+    /* .bar {
+      @apply
+      bg-black
+      my-[5px]
+      h-[2px];
+    } */
+  }
+  &__logo {
+    @apply
+    tracking-tight
+    text-3xl;
+    span {
+      @apply font-thin
+    }
+  }
+  &__nav-bar {
+    @apply
     flex
+    font-family-bold;
+    &__link {
+      @apply
+      hover:text-cyan-600
+      mx-4
+    }
+    .nav-items {
+      @apply
+      mr-2
+      md:mr-4;
+      
+    }
+    &-shopping-cart {
+      width: 24px;
+    }
+    &-search-icon {
+      width: 24px;
+      @apply
+      static
+      md:absolute;
+      z-index: 5;
+    }  
+    &-search {
+      display:flex;
+    }
+    &-search-field {
+      @apply
+      flex
+      md:border-b-primary
+      md:border-b-2;
+      input {
+        @apply
+        hidden
+        md:flex
+        outline-none
+        pl-[25px]
+        relative
+        border-none;
+      }
+    }
+    .product-list {
+      @apply
+      hidden
+      md:flex;
+    }
+  }
+  &__nav-products {
+    @apply
+    top-14
+    left-0
+    flex-col
+    md:flex-row;
+  }
+}
+
+.nav-products-section {
+  @apply
+  absolute
+  shadow-md
+  shadow-slate-200
+  top-[8%]
+  md:top-[9%]
+  w-full
+  right-[100%]
+  md:right-0
+  z-[5];
+  .products-section {
+    @apply
+    flex
+    md:block
     items-center
-    justify-between
-    py-2
-    px-6
-    shadow-md
-    shadow-slate-200;
-    &__logo {
-        @apply
-        tracking-tight
-        text-3xl;
-        span {
-            @apply font-thin
-        }
+    bg-slate-50
+    md:bg-white
+    py-[10px]
+    border-b
+    border-b-zinc-300
+    w-full;
+    &__name,
+    &__desc {
+      @apply
+      font-family-bold
+      px-5;
     }
-    &__nav-bar {
-        @apply
-        flex
-        font-family-bold;
-        &__link {
-            @apply
-            hover:text-cyan-600
-            mx-4
-        }
+    &__desc {
+      @apply
+      font-family-regular
+      text-sm;
     }
+    &__shop {
+      @apply
+      px-[20%]
+      py-[5%]
+      border-l
+      border-l-zinc-300
+      mt-4;
+    }
+    .product-image {
+      @apply
+      w-[30%]
+      md:w-[85%]
+      text-center;
+    }
+    .product-info {
+      @apply
+      text-left
+      w-[70%]
+      md:w-full
+      md:text-center;
+    }
+  }
+  .shop-list {
+    @apply
+    hidden
+    md:list-item;
+    &__items {
+      @apply mb-4;
+    }
+  }
+  .mob-list {
+    @apply
+    pl-4
+    md:hidden;
+    &[open]{
+      .shop-list__item {
+        @apply h-[150px];
+      }
+    }
+    summary {
+      @apply my-4;
+      &::marker {
+        @apply content-none;
+      }
+    }
+    .shop-list__item {
+      @apply 
+      pl-4
+      h-0
+      overflow-hidden
+      transition-[height]
+      ease-linear
+      duration-500;
+    }
+  }
+}
+
+.mobile-view {
+  @apply 
+  fixed
+  overflow-hidden;
+  .nav-products-section {
+    @apply
+    fixed
+    bottom-0
+    transition-all
+    duration-300
+    right-0
+    overflow-y-scroll;
+  }
 }
