--- a/src/pages/login-page/index.css
+++ b/src/pages/login-page/index.css
@@ -1,5 +1,15 @@
 .login {
+    @apply flex flex-col items-center mb-16;
+    &__header {
+        @apply mb-10;
+    }
+    &__form {
+        @apply min-w-full md:min-w-[500px];
+    }
     &__link {
-        @apply underline underline-offset-1;
+        @apply font-family-bold mt-10 underline underline-offset-1;
+    }
+    .link-text {
+        @apply mt-14;
     }
 }
